Fix problems: gallery button, disable scroll in menu, menu horizontal scroll.

--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -6,12 +6,4 @@
       margin-bottom: 64px;
     }
   }
-
-  &__button {
-    display: block;
-
-    @include onTablet {
-      display: grid;
-    }
-  }
 }
