--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -1,12 +1,14 @@
 .menu {
   background-color: #e8eff9;
 
+  height: 100vh;
+
+  overflow-y: auto;
   &__top {
     padding-bottom: 40px;
   }
 
   &__content {
-    height: 100vh;
     padding: 36px 0;
 
     @include onTablet {
