--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -2,6 +2,12 @@
   font-family: "Inter", sans-serif;
   scroll-behavior: smooth;
 
+  &__body {
+    &--with-menu {
+      overflow: hidden;
+    }
+  }
+
   &__menu {
     position: fixed;
     top: 0;
